Another draft of talk

--- a/docs/180516/backup_slides.tex
+++ b/docs/180516/backup_slides.tex
@@ -1,90 +1,89 @@
 \begin{frame}
-   \frametitle{\small 180509\_v1/cmva\_jet1\_cmva}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180509_v1/cmva_jet1_cmva.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180509\_v1/cmva\_jet2\_cmva}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180509_v1/cmva_jet2_cmva.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180514\_\_pre/inclusive\_tt\_cmva\_jet2\_cmva}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180514__pre/inclusive_tt_cmva_jet2_cmva.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180514\_\_pre/inclusive\_lightz\_cmva\_jet2\_cmva}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180514__pre/inclusive_lightz_cmva_jet2_cmva.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180514\_\_pre/inclusive\_heavyz\_cmva\_jet2\_cmva}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180514__pre/inclusive_heavyz_cmva_jet2_cmva.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180509\_v1/min\_dphi\_metj\_hard}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180509_v1/min_dphi_metj_hard.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180514\_\_pre/inclusive\_signal\_maier\_event\_class}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180514__pre/inclusive_signal_maier_event_class.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180509\_v1/cmva\_jet1\_pt}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180509_v1/cmva_jet1_pt.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180514\_old/inclusive\_tt\_cmva\_jet1\_pt}
+   \frametitle{\ttbar Leading cMVA Jet $p_T$}
    \centering
    \includegraphics[width=0.6\linewidth]{180514_old/inclusive_tt_cmva_jet1_pt.pdf}
 \end{frame}
 
 \begin{frame}
-   \frametitle{\small 180514\_old/inclusive\_lightz\_cmva\_jet1\_pt}
+   \frametitle{Z+LF Leading cMVA Jet $p_T$}
    \centering
    \includegraphics[width=0.6\linewidth]{180514_old/inclusive_lightz_cmva_jet1_pt.pdf}
 \end{frame}
 
 \begin{frame}
-   \frametitle{\small 180509\_v1/cmva\_jet2\_pt}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180509_v1/cmva_jet2_pt.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180514\_old/inclusive\_signal\_cmva\_jet2\_pt}
+   \frametitle{Signal Lower cMVA Jet $p_T$}
    \centering
    \includegraphics[width=0.6\linewidth]{180514_old/inclusive_signal_cmva_jet2_pt.pdf}
 \end{frame}
 
 \begin{frame}
-   \frametitle{\small 180514\_old/inclusive\_tt\_cmva\_jet2\_pt}
+   \frametitle{\ttbar Lower cMVA Jet $p_T$}
    \centering
    \includegraphics[width=0.6\linewidth]{180514_old/inclusive_tt_cmva_jet2_pt.pdf}
 \end{frame}
 
 \begin{frame}
-   \frametitle{\small 180514\_old/inclusive\_lightz\_cmva\_jet2\_pt}
+   \frametitle{Z+LF Lower cMVA Jet $p_T$}
    \centering
    \includegraphics[width=0.6\linewidth]{180514_old/inclusive_lightz_cmva_jet2_pt.pdf}
 \end{frame}
 
 \begin{frame}
-   \frametitle{\small 180514\_old/inclusive\_heavyz\_cmva\_jet2\_pt}
+   \frametitle{Z+HF Lower cMVA Jet $p_T$}
    \centering
    \includegraphics[width=0.6\linewidth]{180514_old/inclusive_heavyz_cmva_jet2_pt.pdf}
 \end{frame}
 
+\begin{frame}
+   \frametitle{Signal Region Pre-fit}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180515_class/inclusive_signal_maier_event_class.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\ttbar Pre-fit}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180514__pre/inclusive_tt_cmva_jet2_cmva.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Z+HF Pre-fit}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180514__pre/inclusive_heavyz_cmva_jet2_cmva.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Z+LF Pre-fit}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180514__pre/inclusive_lightz_cmva_jet2_cmva.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small dphi\_met\_dztrkmet}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180515_lumi/dphi_met_dztrkmet.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small cmva\_jet1\_pt}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180515_lumi/cmva_jet1_pt.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small cmva\_jet2\_pt}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180515_lumi/cmva_jet2_pt.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small cmva\_jet1\_cmva}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180515_lumi/log_cmva_jet1_cmva.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small cmva\_jet2\_cmva}
+   \centering
+   \includegraphics[width=0.6\linewidth]{180515_lumi/log_cmva_jet2_cmva.pdf}
+\end{frame}
