A few finishing touches to presentation

--- a/docs/180516/dabercro_hbb_180516.tex
+++ b/docs/180516/dabercro_hbb_180516.tex
@@ -104,6 +104,10 @@
 \section{Sync Improvements}
 
 \begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+\begin{frame}
   \frametitle{Improving Sync Between Analyses}
 
   Identified two more inconsistencies between our understanding of the
@@ -135,6 +139,10 @@
 \end{frame}
 
 \section{Optimization of 2016 \Znn Analysis}
+
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
 
 \begin{frame}
   \frametitle{Investigating Cuts}
@@ -246,6 +254,10 @@
 \section{Difference in 2017 MET Triggers}
 
 \begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+\begin{frame}
   \frametitle{New Triggers in 2017}
 
   2016 Analysis used:
@@ -280,8 +292,7 @@
 \begin{frame}
   \frametitle{NPV re-weighting}
 
-  Using an independent rough measurement for NPV re-weighting on an inclusive
-  signal, Z+HF, and Z+LF selection
+  Re-weigh to match NPV on an inclusive signal, Z+HF, and Z+LF selection
 
   \vspace{12pt}
 
@@ -313,9 +324,16 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Same trigger}
+  \frametitle{One Overlapping Trigger}
 
-  \textcolor{red}{Here, I want to place a met plot with the one trigger path that exists in 2016 and 2017: HLT\_PFMETNoMu120\_PFMHTNoMu120\_IDTight}
+  \begin{center}
+    \includegraphics[width=0.65\linewidth]{180516_trig/pfmet.pdf}
+  \end{center}
+
+  \begin{itemize}
+  \item Both years have {\ttfamily \textcolor{blue}{HLT\_PFMETNoMu120\_PFMHTNoMu120\_IDTight}}
+  \item This trigger alone performs worse in 2017 for our ROI
+  \end{itemize}
 
 \end{frame}
 
