--- a/docs/180516/dabercro_hbb_180516.tex
+++ b/docs/180516/dabercro_hbb_180516.tex
@@ -331,7 +331,8 @@
   \end{center}
 
   \begin{itemize}
-  \item Both years have {\ttfamily \textcolor{blue}{HLT\_PFMETNoMu120\_PFMHTNoMu120\_IDTight}}
+  \item Both 2016 and 2017 runs have the trigger
+    {\ttfamily \textcolor{blue}{HLT\_PFMETNoMu120\_PFMHTNoMu120\_IDTight}}
   \item This trigger alone performs worse in 2017 for our ROI
   \end{itemize}
 
