Minor wording to finish up

--- a/docs/180529/dabercro_hbb_180529.tex
+++ b/docs/180529/dabercro_hbb_180529.tex
@@ -436,14 +436,15 @@
 \begin{frame}
   \frametitle{Conclusion}
   \begin{itemize}
-  \item With 2016 strategy and minor changes
+  \item With 2016 strategy and minor changes, we match the lone Z($\nu\nu$) datacard
+  \item Anticipate improvements:
     \begin{itemize}
-    \item Matching their lone datacard
-    \item Reason to believe we can still improve
+    \item Can still match jet sorting (numbers with \SI{25}{GeV})
+    \item Will try classifier with PUPPI + tensorflow regression
     \end{itemize}
-  \item Boosted region as is gives about 10\% improvement over Z($\nu\nu$)
-  \item N-tuple bugs prevented a combination last week, but working on
-  \item 2017 analysis also delayed, but to be added soon
+  \item Boosted region as is gives about 10\% improvement over Z($\nu\nu$) resolved
+  \item N-tuple bugs prevented a combination last week, \\ but being working on
+  \item 2017 analysis also delayed
   \end{itemize}
 \end{frame}
 
