--- a/docs/presentation.tex
+++ b/docs/presentation.tex
@@ -24,6 +24,7 @@
 \usepackage{siunitx}
 \usepackage{tabularx}
 \usepackage{makecell}
+\usepackage{comment}
 
 \setbeamertemplate{navigation symbols}{}
 \usepackage{graphicx}
@@ -86,10 +87,11 @@
 }
 
 \newcommand{\ttbar}{\ensuremath{t\bar{t}}}
+\newcommand{\bbbar}{\ensuremath{b\bar{b}}}
 
 \begin{document}
 
-\begin{frame}[nonumbering]
+\begin{frame}
   \titlepage
 \end{frame}
 
@@ -97,6 +99,7 @@
   \frametitle{Introduction}
 \end{frame}
 
+\begin{comment}
 \beginbackup
 
 \begin{frame}
@@ -106,5 +109,6 @@
 \input{backup_slides.tex}
 
 \backupend
+\end{comment}
 
 \end{document}
